--- a/src/pages/bmiview/bmiview.html
+++ b/src/pages/bmiview/bmiview.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content padding id="bmiview">
-  <ion-card *ngFor="let item of bmiArray" (click)="viewDetail(item)">
+  <ion-card *ngFor="let item of bmiArray" >
     <ion-item>
       <h2></h2>
       <h2>{{item.develop_id}}</h2>
