--- a/src/pages/menuparent/menuparent.html
+++ b/src/pages/menuparent/menuparent.html
@@ -53,6 +53,10 @@
         <button ion-button clear item-end>View</button>
       </ion-item>
 
+      <button ion-button round block (click)="logout()">Logout</button>
+
+      
+
 
 
   </ion-list>
