--- a/src/pages/testlogin/testlogin.html
+++ b/src/pages/testlogin/testlogin.html
@@ -12,18 +12,19 @@
 
 <ion-content padding id="loginparent">
   <ion-item>
-      <ion-input [(ngModel)]="username" placeholder="Username Login"></ion-input>
-     
+      <ion-input type="text" [(ngModel)]="username" placeholder="Username Login"></ion-input>
   </ion-item>
+
   <ion-item>
-    <ion-input [(ngModel)]="password" placeholder="Password Login"></ion-input>
+    <ion-input type="password" [(ngModel)]="password" placeholder="Password Login"></ion-input>
   </ion-item>
 
   <button ion-button block (click)="Testlog(username,password)">
     <ion-icon name="log-in">
-
     </ion-icon> &nbsp; &nbsp; SIGN IN
   </button>
+
+
 
 
 </ion-content>
